Errores de ImpactMap.

--- a/2.2.-Impact-Map.md
+++ b/2.2.-Impact-Map.md
@@ -25,7 +25,7 @@ Mantener la **continuidad de negocio con minimización de costes**, asegurando l
 
      * Listado y gestión de consejeros, con asignación de artículos según especialidad.
      * Panel del consejero con acceso a manuscritos, formularios de evaluación y plazos.
-     * Registro de evaluaciones, informes adjuntos y control de recordatorios.
+     * Registro de evaluaciones e informes adjuntos.
 
 3. **Consolidar la configuración de los números de la revista**
 
@@ -43,7 +43,7 @@ Mantener la **continuidad de negocio con minimización de costes**, asegurando l
 
    * **Entregables**
 
-     * Alta, edición y baja de suscriptores (particulares, militares, institucionales).
+     * Alta, edición y baja de suscriptores (particulares, militares, institucionales, etc).
      * Asociación de suscriptores a suscripciones con fechas, estados y número de ejemplares.
      * Registro de pagadores y métodos de pago con control de IVA.
 
@@ -63,21 +63,19 @@ Mantener la **continuidad de negocio con minimización de costes**, asegurando l
    * **Entregables**
 
      * Panel de control con estados de artículos y números de revista.
-     * Historiales de artículos y usuarios para trazabilidad completa.
+     * Historiales de artículos y autores.
 
 7. **Recibir información detallada sobre la revista**
 
    * **Entregables**
 
      * Búsquedas avanzadas por artículo, autor, consejero, suscriptor o número de revista.
-     * Informes y estadísticas estratégicas consolidadas.
 
 8. **Generar documentación oficial (certificados y pagos)**
 
    * **Entregables**
 
      * Certificados de pago a autores por artículos publicados.
-     * Recibos de facturación y control de ingresos y gastos.
 
 
 
