--- a/2.3.-Historias-de-Usuario.md
+++ b/2.3.-Historias-de-Usuario.md
@@ -1,35 +1,52 @@
 # Historias de Usuario (HU)
 
-| **Historia de Usuario (HU)** |
-|-------------------------------|
-| HU.01 Como **Editor**, quiero registrar autores con documentos y datos bancarios, para poder gestionar sus artículos. |
-| HU.02 Como **Editor**, quiero dar de alta artículos con autores y documentos, para iniciar el proceso de revisión. |
-| HU.03 Como **Editor**, quiero cambiar el estado de un artículo en su ciclo de vida, para mantener la trazabilidad del proceso. |
-| HU.04 Como **Editor**, quiero clasificar artículos por tipo, temática y sección, para facilitar la búsqueda y maquetación. |
-| HU.05 Como **Editor**, quiero registrar consejeros militares, para que puedan evaluar artículos. |
-| HU.06 Como **Editor**, quiero asignar consejeros a artículos, para que realicen evaluaciones. |
-| HU.07 Como **Editor**, quiero registrar evaluaciones con nota, recomendación e informe, para decidir si publicar. |
-| HU.08 Como **Editor**, quiero crear números de revista, para organizar artículos publicados. |
-| HU.09 Como **Editor**, quiero asignar o quitar artículos a un número de revista, para preparar la publicación. |
-| HU.10 Como **Editor**, quiero publicar un número de revista, para que pase a distribución. |
-| HU.11 Como **Editor/Consulta**, quiero realizar búsquedas avanzadas de artículos, autores y documentos, para acceder a información. |
-| HU.12 Como **Editor**, quiero generar etiquetas de envío a autores, para enviar ejemplares publicados. |
-| HU.13 Como **Distribuidor**, quiero registrar suscriptores y suscripciones, para enviar revistas. |
-| HU.14 Como **Distribuidor**, quiero registrar o editar el pagador de una suscripción, para gestionar pagos. |
-| HU.15 Como **Distribuidor**, quiero modificar estados y datos de suscripciones, para mantenerlas actualizadas. |
-| HU.16 Como **Distribuidor**, quiero generar etiquetas de envío de revistas, para gestionar los lotes. |
-| HU.17 Como **Distribuidor**, quiero exportar etiquetas en PDF/XLS, para impresión o manipulación. |
-| HU.18 Como **Distribuidor/Consulta**, quiero consultar suscriptores, suscripciones y direcciones, para verificar datos. |
-| HU.19 Como **Editor/Dirección**, quiero generar certificados de pago para autores de artículos publicados, indicando cantidad y retención, para asegurar la correcta remuneración. |
+| **ID** | **Historia de Usuario (HU)**                                                                                                          |
+| ------ | ------------------------------------------------------------------------------------------------------------------------------------- |
+| HU.01  | Como **Redactor**, quiero registrar autores con datos de contacto, para poder gestionarlos en el sistema.                             |
+| HU.02  | Como **Redactor**, quiero asociar documentos obligatorios y opcionales a cada autor, para completar su perfil.                        |
+| HU.03  | Como **Redactor**, quiero registrar el perfil militar de un autor, para reflejar su información específica.                           |
+| HU.04  | Como **Redactor**, quiero registrar los datos bancarios de un autor, para gestionar su remuneración.                                  |
+| HU.05  | Como **Redactor**, quiero visualizar la ficha de un autor junto a sus artículos, para gestionar su relación con la revista.           |
+| HU.06  | Como **Redactor**, quiero dar de alta artículos con metadatos y manuscritos, y mantener versiones, para iniciar su proceso editorial. |
+| HU.07  | Como **Redactor**, quiero actualizar el estado de un artículo en su ciclo de vida, para mantener trazabilidad.                        |
+| HU.08  | Como **Redactor**, quiero asignar artículos a consejeros desde un panel, para gestionar evaluaciones.                                 |
+| HU.09  | Como **Redactor**, quiero consultar un listado de consejeros registrados, para asignarles evaluaciones.                               |
+| HU.10  | Como **Redactor**, quiero registrar, editar o eliminar consejeros, para mantener actualizada la base de revisores.                    |
+| HU.11  | Como **Redactor**, quiero registrar evaluaciones con nota, recomendación y observaciones, para calificar los articulos.                      |
+| HU.12  | Como **Redactor**, quiero adjuntar informes de evaluación, para complementar mis recomendaciones.                                    |
+| HU.13  | Como **Redactor**, quiero crear y editar números de revista, para organizar artículos en ediciones.                                   |
+| HU.14  | Como **Redactor**, quiero gestionar secciones dentro de un número, para estructurar la publicación.                                   |
+| HU.15  | Como **Redactor**, quiero asignar artículos aceptados a secciones de un número, para consolidar la publicación.                       |
+| HU.16  | Como **Distribuidor**, quiero dar de alta y editar suscripciones, para gestionar el ciclo de vida de los suscriptores.                |
+| HU.17  | Como **Distribuidor**, quiero modificar el estado de una suscripción (activa, suspendida, vencida), para mantenerla actualizada.      |
+| HU.18  | Como **Distribuidor**, quiero registrar datos personales y de contacto de un suscriptor, para mantener actualizada su ficha.          |
+| HU.19  | Como **Distribuidor**, quiero registrar un pagador distinto al suscriptor, para gestionar los cobros.                                 |
+| HU.20  | Como **Distribuidor**, quiero registrar direcciones postales asociadas a suscriptores, para gestionar envíos.                         |
+| HU.21  | Como **Distribuidor**, quiero generar etiquetas de envío postal en plantillas configurables, para preparar envíos.                    |
+| HU.22  | Como **Distribuidor**, quiero exportar etiquetas de envío postal en PDF/XLS, para impresión o manipulación.                           |
+| HU.23  | Como **Dirección**, quiero consultar y actualizar el estado de los números de la revista, para monitorizar su avance.                 |
+| HU.24  | Como **Dirección**, quiero consultar observaciones y versiones de documentos de artículos, para ver su histórico.                |
+| HU.25  | Como **Dirección**, quiero buscar artículos por título, autor, estado y temática, para acceder a información rápida.                  |
+| HU.26  | Como **Dirección**, quiero buscar autores por nombre, perfil o unidad, para acceder a su historial.                                  |
+| HU.27  | Como **Dirección**, quiero buscar números de revista publicados o en preparación, para disponer de información consolidada.           |
+| HU.28  | Como **Dirección**, quiero generar certificados de pago para autores, indicando retenciones, para asegurar su correcta remuneración.  |
+| HU.29  | Como **Dirección**, quiero exportar certificados de pago en PDF/XLS, para archivarlos y remitirlos a contabilidad.                    |
+
+---
+
+# Relación Impactos, Entregables e Historias de Usuario
+
+| **Impacto**                                                                            | **Entregables (Impact Map V3)**                                                                                                                                                                                                                                                                                                                                                | **Historias de Usuario (HU)**                   |
+| -------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------- |
+| **1. Reducir los pasos para registrar artículos, autores y su documentación asociada** | - Panel de carga de datos de autor y datos de contacto<br>- Formulario de carga de documentos DNI, CV y opcionales<br>- Formulario de carga de datos de Perfil Militar<br>- Formulario de carga de datos bancarios<br>- Vista de autor con datos y artículos asociados<br>- Formulario de carga de artículos y control de versiones<br>- Edición de los estados de un artículo | HU.01, HU.02, HU.03, HU.04, HU.05, HU.06, HU.07 |
+| **2. Agilizar el ciclo de evaluación de artículos**                                    | - Panel de consejeros con asignación de artículos<br>- Listado de Consejeros registrados<br>- Alta, baja y edición de Consejeros en el sistema<br>- Registro de evaluaciones con formulario y campos de nota/recomendación<br>- Enlace de subida de informes de evaluación                                                                                                     | HU.08, HU.09, HU.10, HU.11, HU.12               |
+| **3. Consolidar la configuración de los números de la revista**                        | - Panel de gestión de números de la revista<br>- Panel de edición de las secciones de la revista<br>- Marcado y asignación de artículos propuestos a las secciones                                                                                                                                                                                                             | HU.13, HU.14, HU.15                             |
+| **4. Centralizar la gestión de suscripciones y suscriptores**                          | - Formulario de alta y edición de suscripciones<br>- Cambio de estado de las suscripciones<br>- Formulario de datos personales y contacto de suscriptor<br>- Formulario de registro de pagador con datos bancarios<br>- Formularios de registro de direcciones postales                                                                                                        | HU.16, HU.17, HU.18, HU.19, HU.20               |
+| **5. Reducción de etapas para la distribución física**                                 | - Plantilla configurable de etiquetas de envío postal<br>- Exportación de etiquetas de envío postal                                                                                                                                                                                                                                                                            | HU.21, HU.22                                    |
+| **6. Facilitar la monitorización del proceso editorial**                               | - Asignación de estados a los Números de la Revista<br>- Observaciones asociadas a artículos y control de versiones de documentos                                                                                                                                                                                                                                              | HU.23, HU.24                                    |
+| **7. Recibir información detallada sobre la revista**                                  | - Componente de búsqueda por artículos y datos asociados<br>- Componente de búsqueda por autores y datos asociados<br>- Componente de búsqueda por números de revista y datos asociados                                                                                                                                                                                        | HU.25, HU.26, HU.27                             |
+| **8. Mantener el control de pagos actualizado**                                        | - Plantilla de certificados de pago sobre artículos publicados<br>- Exportación de certificados de pago                                                                                                                                                                                                                                                                        | HU.28, HU.29                                    |
+
+* **Trazabilidad completa Impacto → Entregables → HU**.
 
 
-| **Impacto**                                                                            | **Entregables**                                                                                                           | **Historias de Usuario (HU)**                                                                                                              |
-| -------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------ |
-| **1. Reducir los pasos para registrar artículos, autores y su documentación asociada** | - Registrar y modificar autores y sus artículos enviados a la revista<br>- Asociación de documentos a autores y artículos | - HU.01 Registrar autores con documentos y datos bancarios<br>- HU.02 Alta de artículos con autores y documentos                           |
-| **2. Agilizar el ciclo de evaluación de artículos**                                    | - Mantener el listado de consejeros y sus evaluaciones<br>- Registrar evaluaciones sobre artículos                        | - HU.05 Alta de consejeros<br>- HU.06 Asignar consejeros a artículos<br>- HU.07 Registrar evaluaciones con nota, recomendación e informe   |
-| **3. Consolidar la configuración de los números de revista**                           | - Validar la propuesta de un número de revista<br>- Consolidar artículos en revistas                                      | - HU.08 Crear números de revista<br>- HU.09 Asignar o quitar artículos a un número<br>- HU.10 Publicar número de revista                   |
-| **4. Centralizar la gestión de suscripciones y suscriptores**                          | - Gestionar ciclo de vida de suscripciones                                                                                | - HU.13 Alta de suscriptores y suscripciones<br>- HU.14 Registrar o editar pagador<br>- HU.15 Modificar estados de suscripciones           |
-| **5. Reducción de etapas para la distribución física**                                 | - Generación unificada de etiquetas<br>- Control de ejemplares físicos                                                    | - HU.12 Generar etiquetas de envío a autores<br>- HU.16 Generar etiquetas de envío a suscriptores<br>- HU.17 Exportar etiquetas en PDF/XLS |
-| **6. Facilitar la monitorización del proceso editorial**                               | - Controlar progreso mediante estados de artículos y revistas                                                             | - HU.03 Cambiar estados de artículo<br>- HU.10 Cambiar estados de revista                                                                  |
-| **7. Recibir información detallada sobre la revista**                                  | - Obtener información según criterios de búsqueda                                                                         | - HU.11 Consulta avanzada de artículos, autores y documentos<br>- HU.18 Consultar suscriptores, suscripciones y direcciones                |
-| **8. Asegurar la correcta remuneración de autores publicados**                         | - Generación de certificados de pago<br>- Registro de cantidades y retenciones aplicadas                                  | - HU.19 Generar certificados de pago para autores                                                                                          |
