--- a/2.2.-Impact-Map.md
+++ b/2.2.-Impact-Map.md
@@ -1,82 +1,137 @@
 ## ImpactMap
 
-![](Imágenes/ImpactMapV3.jpg)
+![](Imágenes/ImpactMapV4.jpg)
 
-## 1. Objetivo Principal
 
-Mantener la **continuidad de negocio con minimización de costes**, asegurando la gestión editorial de artículos, evaluaciones, publicaciones y envíos a suscriptores, mediante la migración desde Lotus Notes (fin de soporte) a una nueva plataforma.
+# 1. Objetivo Principal
 
----
+Mantener la **continuidad de negocio con minimización de costes**, asegurando la gestión editorial de artículos, evaluaciones, publicaciones, suscripciones y distribución de ejemplares, mediante la **migración desde Lotus Notes (fin de soporte) a una nueva plataforma** que centralice procesos y reduzca al menos un **30% el tiempo/coste de gestión manual**.
 
-## 2. Actores, Impactos y Entregables
-
-### Editor
-
-1. **Reducir los pasos para registrar artículos, autores y su documentación asociada**
-
-   * **Entregables**
-
-     * Registro y modificación de autores con datos, direcciones y documentos (DNI, CV, certificados).
-     * Alta de artículos con metadatos, manuscritos y anexos en un mismo flujo.
-
-2. **Agilizar el ciclo de evaluación de artículos**
-
-   * **Entregables**
-
-     * Listado y gestión de consejeros, con asignación de artículos según especialidad.
-     * Panel del consejero con acceso a manuscritos, formularios de evaluación y plazos.
-     * Registro de evaluaciones e informes adjuntos.
-
-3. **Consolidar la configuración de los números de la revista**
-
-   * **Entregables**
-
-     * Gestión de números de revista con artículos aceptados y de reserva.
-     * Clasificación de artículos por temática, sección y tipo.
-     * Validación automática de criterios editoriales (extensión en páginas y caracteres).
+> Acceso al sistema solo si dispone de credenciales DICODEF. En caso contrario, el envío de artículos y documentos se realiza por correo electrónico y el Redactor los integra en la plataforma.
 
 ---
 
-### Distribuidor
+# 2. Actores, Impactos y Entregables
 
-4. **Centralizar la gestión de suscripciones y suscriptores**
+## Autor
 
-   * **Entregables**
+**8. Gestión autónoma de sus datos y artículos**
+*Entregables*
 
-     * Alta, edición y baja de suscriptores (particulares, militares, institucionales, etc).
-     * Asociación de suscriptores a suscripciones con fechas, estados y número de ejemplares.
-     * Registro de pagadores y métodos de pago con control de IVA.
+* Panel de carga/modificación de datos de autor y contacto.
+* Formulario de carga de documentos (DNI, CV, certificados opcionales).
+* Formulario de perfil militar.
+* Formulario de datos bancarios.
+* Formulario de carga de artículos y control de versiones.
 
-5. **Reducir etapas para la distribución física**
+**7. Facilitar el acceso a sus documentos**
+*Entregables*
 
-   * **Entregables**
+* Vista de autor con artículos asociados y estados.
+* Acceso a observaciones editoriales vinculadas.
 
-     * Configuración de distribución de ejemplares por suscriptor.
-     * Generación automática de etiquetas de envío listas para impresión.
+**3. Obtener información del estado de sus artículos**
+*Entregables*
+
+* Consulta de estado de artículos en tiempo real.
+* Notificaciones de aceptación, rechazo o revisiones.
 
 ---
 
-### Dirección
+## Redactor
 
-6. **Facilitar la monitorización del proceso editorial**
+**1. Reducir los pasos para registrar artículos, autores y su documentación asociada**
+*Entregables*
 
-   * **Entregables**
+* Registro y modificación de autores con datos, direcciones y documentos.
+* Alta de artículos con metadatos, manuscritos y anexos en un mismo flujo.
 
-     * Panel de control con estados de artículos y números de revista.
-     * Historiales de artículos y autores.
+**2. Consolidar la configuración de los números de la revista**
+*Entregables*
 
-7. **Recibir información detallada sobre la revista**
+* Panel de gestión de números de revista.
+* Panel de edición de secciones.
+* Marcado y asignación de artículos aceptados o en reserva.
 
-   * **Entregables**
+**5. Agilizar el ciclo de evaluación de artículos**
+*Entregables*
 
-     * Búsquedas avanzadas por artículo, autor, consejero, suscriptor o número de revista.
+* Listado y gestión de consejeros.
+* Alta/baja/edición de consejeros.
+* Asignación de artículos según especialidad.
+* Registro de evaluaciones con nota y recomendación.
+* Subida de informes de evaluación.
 
-8. **Generar documentación oficial (certificados y pagos)**
+---
 
-   * **Entregables**
+## Consejero
 
-     * Certificados de pago a autores por artículos publicados.
+**6. Acceso directo a los artículos a evaluar**
+*Entregables*
 
+* Panel de consejero con artículos asignados.
+* Descarga de manuscritos anonimizados.
 
+**4. Reducir los trámites de evaluación de artículos**
+*Entregables*
 
+* Formularios de evaluación estructurados.
+* Campos de nota/recomendación.
+* Subida de informes complementarios.
+* Control de plazos y recordatorios automáticos.
+
+---
+
+## Distribuidor
+
+**9. Centralizar la gestión de suscripciones y suscriptores**
+*Entregables*
+
+* Alta, edición y baja de suscriptores.
+* Asociación de suscripciones con fechas, estados y nº ejemplares.
+* Registro de pagadores y métodos de pago con control de IVA.
+* Formularios de direcciones postales.
+
+**11. Reducción de etapas para la distribución física**
+*Entregables*
+
+* Configuración de distribución de ejemplares.
+* Plantilla configurable de etiquetas de envío.
+* Exportación de etiquetas de envío postal (PDF/XLS).
+
+---
+
+## Dirección
+
+**10. Facilitar la monitorización del proceso editorial**
+*Entregables*
+
+* Panel de control con estados de artículos y números de revista.
+* Observaciones asociadas y control de versiones.
+* Historial de artículos y autores.
+
+**13. Recibir información detallada sobre la revista**
+*Entregables*
+
+* Búsquedas avanzadas por artículos, autores, consejeros, suscriptores o números.
+* Panel de informes y estadísticas estratégicas.
+
+**12. Mantener el control de pagos actualizado**
+*Entregables*
+
+* Plantilla de certificados de pago a autores.
+* Exportación de certificados en PDF/XLS.
+
+---
+
+## Administrador del sistema
+
+**14. Proveer de acceso a la plataforma a nuevos usuarios**
+*Entregables*
+
+* Formulario de alta de usuarios.
+* Panel de gestión de usuarios y roles.
+* Panel de notificaciones y recuperación de credenciales.
+
+---
 
