--- a/2.3.-Historias-de-Usuario.md
+++ b/2.3.-Historias-de-Usuario.md
@@ -1,52 +1,61 @@
 # Historias de Usuario (HU)
 
-| **ID** | **Historia de Usuario (HU)**                                                                                                          |
-| ------ | ------------------------------------------------------------------------------------------------------------------------------------- |
-| HU.01  | Como **Redactor**, quiero registrar autores con datos de contacto, para poder gestionarlos en el sistema.                             |
-| HU.02  | Como **Redactor**, quiero asociar documentos obligatorios y opcionales a cada autor, para completar su perfil.                        |
-| HU.03  | Como **Redactor**, quiero registrar el perfil militar de un autor, para reflejar su información específica.                           |
-| HU.04  | Como **Redactor**, quiero registrar los datos bancarios de un autor, para gestionar su remuneración.                                  |
-| HU.05  | Como **Redactor**, quiero visualizar la ficha de un autor junto a sus artículos, para gestionar su relación con la revista.           |
-| HU.06  | Como **Redactor**, quiero dar de alta artículos con metadatos y manuscritos, y mantener versiones, para iniciar su proceso editorial. |
-| HU.07  | Como **Redactor**, quiero actualizar el estado de un artículo en su ciclo de vida, para mantener trazabilidad.                        |
-| HU.08  | Como **Redactor**, quiero asignar artículos a consejeros desde un panel, para gestionar evaluaciones.                                 |
-| HU.09  | Como **Redactor**, quiero consultar un listado de consejeros registrados, para asignarles evaluaciones.                               |
-| HU.10  | Como **Redactor**, quiero registrar, editar o eliminar consejeros, para mantener actualizada la base de revisores.                    |
-| HU.11  | Como **Redactor**, quiero registrar evaluaciones con nota, recomendación y observaciones, para calificar los articulos.                      |
-| HU.12  | Como **Redactor**, quiero adjuntar informes de evaluación, para complementar mis recomendaciones.                                    |
-| HU.13  | Como **Redactor**, quiero crear y editar números de revista, para organizar artículos en ediciones.                                   |
-| HU.14  | Como **Redactor**, quiero gestionar secciones dentro de un número, para estructurar la publicación.                                   |
-| HU.15  | Como **Redactor**, quiero asignar artículos aceptados a secciones de un número, para consolidar la publicación.                       |
-| HU.16  | Como **Distribuidor**, quiero dar de alta y editar suscripciones, para gestionar el ciclo de vida de los suscriptores.                |
-| HU.17  | Como **Distribuidor**, quiero modificar el estado de una suscripción (activa, suspendida, vencida), para mantenerla actualizada.      |
-| HU.18  | Como **Distribuidor**, quiero registrar datos personales y de contacto de un suscriptor, para mantener actualizada su ficha.          |
-| HU.19  | Como **Distribuidor**, quiero registrar un pagador distinto al suscriptor, para gestionar los cobros.                                 |
-| HU.20  | Como **Distribuidor**, quiero registrar direcciones postales asociadas a suscriptores, para gestionar envíos.                         |
-| HU.21  | Como **Distribuidor**, quiero generar etiquetas de envío postal en plantillas configurables, para preparar envíos.                    |
-| HU.22  | Como **Distribuidor**, quiero exportar etiquetas de envío postal en PDF/XLS, para impresión o manipulación.                           |
-| HU.23  | Como **Dirección**, quiero consultar y actualizar el estado de los números de la revista, para monitorizar su avance.                 |
-| HU.24  | Como **Dirección**, quiero consultar observaciones y versiones de documentos de artículos, para ver su histórico.                |
-| HU.25  | Como **Dirección**, quiero buscar artículos por título, autor, estado y temática, para acceder a información rápida.                  |
-| HU.26  | Como **Dirección**, quiero buscar autores por nombre, perfil o unidad, para acceder a su historial.                                  |
-| HU.27  | Como **Dirección**, quiero buscar números de revista publicados o en preparación, para disponer de información consolidada.           |
-| HU.28  | Como **Dirección**, quiero generar certificados de pago para autores, indicando retenciones, para asegurar su correcta remuneración.  |
-| HU.29  | Como **Dirección**, quiero exportar certificados de pago en PDF/XLS, para archivarlos y remitirlos a contabilidad.                    |
+| **ID** | **Historia de Usuario (HU)**                                                                                                                                           |
+| ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| HU.01  | Como **Autor con credenciales DICODEF / Redactor**, quiero registrar mis datos de contacto, para gestionar mi participación en la revista.                             |
+| HU.02  | Como **Autor con credenciales DICODEF / Redactor**, quiero asociar documentos obligatorios y opcionales (DNI, CV, anexos), para completar mi perfil.                   |
+| HU.03  | Como **Autor con credenciales DICODEF / Redactor**, quiero registrar mi perfil militar, para reflejar información específica.                                          |
+| HU.04  | Como **Autor con credenciales DICODEF / Redactor**, quiero registrar mis datos bancarios, para gestionar mi remuneración.                                              |
+| HU.05  | Como **Autor con credenciales DICODEF / Redactor**, quiero visualizar mi ficha junto a mis artículos, para gestionar mi relación con la revista.                       |
+| HU.06  | Como **Autor con credenciales DICODEF / Redactor**, quiero dar de alta artículos con metadatos y manuscritos, y mantener versiones, para iniciar mi proceso editorial. |
+| HU.07  | Como **Redactor**, quiero actualizar el estado de un artículo en su ciclo de vida, para mantener trazabilidad.                                                         |
+| HU.08  | Como **Redactor**, quiero asignar artículos a consejeros desde un panel, para organizar evaluaciones.                                                                  |
+| HU.09  | Como **Redactor**, quiero consultar un listado de consejeros registrados, para gestionar evaluaciones.                                                                 |
+| HU.10  | Como **Redactor**, quiero registrar, editar o eliminar consejeros, para mantener actualizada la base de revisores.                                                     |
+| HU.11  | Como **Consejero con credenciales DICODEF / Redactor**, quiero registrar evaluaciones con nota, recomendación y observaciones, para calificar artículos.               |
+| HU.12  | Como **Consejero con credenciales DICODEF / Redactor**, quiero adjuntar informes de evaluación, para complementar mis recomendaciones.                                 |
+| HU.13  | Como **Redactor**, quiero crear números de revista, para organizar artículos en ediciones.                                                                             |
+| HU.14  | Como **Redactor**, quiero gestionar secciones dentro de un número, para estructurar la publicación.                                                                    |
+| HU.15  | Como **Redactor**, quiero asignar artículos aceptados a secciones de un número, para consolidar la publicación.                                                        |
+| HU.16  | Como **Distribuidor**, quiero dar de alta y editar suscriptores, para gestionar el ciclo de vida de los envíos.                                                        |
+| HU.17  | Como **Distribuidor**, quiero modificar el estado de una suscripción (activa, suspendida, vencida), para mantenerla actualizada.                                       |
+| HU.18  | Como **Distribuidor**, quiero registrar datos personales y de contacto de un suscriptor, para mantener actualizada su ficha.                                           |
+| HU.19  | Como **Distribuidor**, quiero registrar un pagador distinto al suscriptor, para gestionar cobros.                                                                      |
+| HU.20  | Como **Distribuidor**, quiero registrar direcciones postales asociadas a suscriptores, para organizar envíos.                                                          |
+| HU.21  | Como **Distribuidor**, quiero generar etiquetas de envío postal en plantillas configurables, para preparar los envíos.                                                 |
+| HU.22  | Como **Distribuidor**, quiero exportar etiquetas de envío postal en PDF/XLS, para impresión o manipulación.                                                            |
+| HU.23  | Como **Dirección**, quiero consultar y actualizar el estado de los números de la revista, para monitorizar su avance.                                                  |
+| HU.24  | Como **Dirección**, quiero consultar observaciones y versiones de documentos de artículos, para ver su histórico.                                                      |
+| HU.25  | Como **Dirección**, quiero buscar artículos por título, autor, estado y temática, para acceder a información rápida.                                                   |
+| HU.26  | Como **Dirección**, quiero buscar autores por nombre, perfil o unidad, para acceder a su historial.                                                                    |
+| HU.27  | Como **Dirección**, quiero buscar números de revista publicados o en preparación, para disponer de información consolidada.                                            |
+| HU.28  | Como **Dirección**, quiero generar certificados de pago para autores, indicando retenciones, para asegurar su correcta remuneración.                                   |
+| HU.29  | Como **Dirección**, quiero exportar certificados de pago en PDF/XLS, para archivarlos y remitirlos a contabilidad.                                                     |
+| HU.30  | Como **Administrador**, quiero dar de alta usuarios en el sistema, para que puedan acceder a la plataforma.                                                            |
+| HU.31  | Como **Administrador**, quiero asignar uno o varios roles a los usuarios, para definir sus permisos.                                                                   |
+| HU.32  | Como **Administrador**, quiero consultar y editar los usuarios dados de alta, para mantener la gestión actualizada.                                                    |
 
 ---
 
-# Relación Impactos, Entregables e Historias de Usuario
+# Relación Impactos – Entregables – HU
 
-| **Impacto**                                                                            | **Entregables (Impact Map V3)**                                                                                                                                                                                                                                                                                                                                                | **Historias de Usuario (HU)**                   |
-| -------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------- |
-| **1. Reducir los pasos para registrar artículos, autores y su documentación asociada** | - Panel de carga de datos de autor y datos de contacto<br>- Formulario de carga de documentos DNI, CV y opcionales<br>- Formulario de carga de datos de Perfil Militar<br>- Formulario de carga de datos bancarios<br>- Vista de autor con datos y artículos asociados<br>- Formulario de carga de artículos y control de versiones<br>- Edición de los estados de un artículo | HU.01, HU.02, HU.03, HU.04, HU.05, HU.06, HU.07 |
-| **2. Agilizar el ciclo de evaluación de artículos**                                    | - Panel de consejeros con asignación de artículos<br>- Listado de Consejeros registrados<br>- Alta, baja y edición de Consejeros en el sistema<br>- Registro de evaluaciones con formulario y campos de nota/recomendación<br>- Enlace de subida de informes de evaluación                                                                                                     | HU.08, HU.09, HU.10, HU.11, HU.12               |
-| **3. Consolidar la configuración de los números de la revista**                        | - Panel de gestión de números de la revista<br>- Panel de edición de las secciones de la revista<br>- Marcado y asignación de artículos propuestos a las secciones                                                                                                                                                                                                             | HU.13, HU.14, HU.15                             |
-| **4. Centralizar la gestión de suscripciones y suscriptores**                          | - Formulario de alta y edición de suscripciones<br>- Cambio de estado de las suscripciones<br>- Formulario de datos personales y contacto de suscriptor<br>- Formulario de registro de pagador con datos bancarios<br>- Formularios de registro de direcciones postales                                                                                                        | HU.16, HU.17, HU.18, HU.19, HU.20               |
-| **5. Reducción de etapas para la distribución física**                                 | - Plantilla configurable de etiquetas de envío postal<br>- Exportación de etiquetas de envío postal                                                                                                                                                                                                                                                                            | HU.21, HU.22                                    |
-| **6. Facilitar la monitorización del proceso editorial**                               | - Asignación de estados a los Números de la Revista<br>- Observaciones asociadas a artículos y control de versiones de documentos                                                                                                                                                                                                                                              | HU.23, HU.24                                    |
-| **7. Recibir información detallada sobre la revista**                                  | - Componente de búsqueda por artículos y datos asociados<br>- Componente de búsqueda por autores y datos asociados<br>- Componente de búsqueda por números de revista y datos asociados                                                                                                                                                                                        | HU.25, HU.26, HU.27                             |
-| **8. Mantener el control de pagos actualizado**                                        | - Plantilla de certificados de pago sobre artículos publicados<br>- Exportación de certificados de pago                                                                                                                                                                                                                                                                        | HU.28, HU.29                                    |
+| **Impacto**                                                            | **Entregables**                                                                                                                    | **HU**                                   |
+| ---------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------- |
+| **1. Reducir pasos para registrar artículos, autores y documentación** | Panel de datos de autor<br>Formularios de documentos, perfil militar y bancarios<br>Formulario de artículos y control de versiones | HU.01, HU.02, HU.03, HU.04, HU.05, HU.06 |
+| **2. Consolidar la configuración de los números de la revista**        | Panel de gestión de números<br>Panel de secciones<br>Asignación de artículos aceptados o en reserva                                | HU.13, HU.14, HU.15                      |
+| **3. Obtener información del estado de los artículos**                 | Consulta de estados<br>Notificaciones de decisiones                                                                                | HU.05, HU.07                             |
+| **4. Reducir trámites de evaluación de artículos**                     | Formularios de evaluación<br>Campos de recomendación<br>Subida de informes<br>Control de plazos                                    | HU.11, HU.12                             |
+| **5. Agilizar el ciclo de evaluación de artículos**                    | Listado y gestión de consejeros<br>Alta/baja/edición de consejeros<br>Asignación de artículos<br>Registro de evaluaciones          | HU.08, HU.09, HU.10, HU.11, HU.12        |
+| **6. Acceso directo a artículos a evaluar**                            | Panel de consejero<br>Descarga de manuscritos anonimizados                                                                         | HU.08, HU.11                             |
+| **7. Facilitar acceso a documentos del autor**                         | Vista de autor con artículos<br>Acceso a observaciones editoriales                                                                 | HU.05                                    |
+| **8. Gestión autónoma de datos y artículos de autor**                  | Panel de autor<br>Formularios de datos y documentos<br>Formulario de artículos                                                     | HU.01, HU.02, HU.03, HU.04, HU.05, HU.06 |
+| **9. Centralizar gestión de suscripciones y suscriptores**             | Alta y edición de suscriptores<br>Gestión de suscripciones<br>Pagadores<br>Direcciones postales                                    | HU.16, HU.17, HU.18, HU.19, HU.20        |
+| **10. Facilitar la monitorización del proceso editorial**              | Panel de control<br>Observaciones y versiones<br>Historial de artículos y autores                                                  | HU.23, HU.24                             |
+| **11. Reducción de etapas en distribución física**                     | Configuración de distribución<br>Plantilla de etiquetas<br>Exportación de etiquetas                                                | HU.21, HU.22                             |
+| **12. Mantener el control de pagos actualizado**                       | Certificados de pago<br>Exportación de certificados                                                                                | HU.28, HU.29                             |
+| **13. Recibir información detallada sobre la revista**                 | Búsquedas avanzadas<br>Panel de informes y estadísticas                                                                            | HU.25, HU.26, HU.27                      |
+| **14. Proveer acceso a nuevos usuarios**                               | Alta de usuarios<br>Gestión de roles<br>Consulta y edición de usuarios                                                             | HU.30, HU.31, HU.32                      |
 
-* **Trazabilidad completa Impacto → Entregables → HU**.
+---
 
 
