Especificación de HU

--- a/4.2.-Historias-de-Usuarios.md
+++ b/4.2.-Historias-de-Usuarios.md
@@ -1,3 +1,4 @@
+# Historias de Usuario
 
 ## HU.01 – Alta de Autor
 
@@ -273,5 +274,194 @@
 - Se registra la **cantidad a pagar** por autor (puede ser variable según calidad).  
 - Se aplica y muestra la **retención correspondiente** (IRPF u otra definida).  
 - Se genera un **certificado en PDF/XLS** con los datos del autor, artículo, importe y retención.  
+
+---
+
+## HU.20 – Exportar Certificado de Pago
+
+**Como**: Dirección
+**Quiero**: exportar el certificado de pago generado a **PDF/XLS**
+**Para**: archivarlo y remitirlo a contabilidad
+
+**DoD**
+
+* Entrada: certificado previamente **generado** (HU.19).
+* Exportación en **PDF** (maquetado) y **XLS/CSV** (datos tabulares).
+
+
+---
+
+## HU.21 – Monitorizar números de revista (estado y capacidad)
+
+**Como**: Dirección
+**Quiero**: consultar el estado de los **números de revista** y su **capacidad** (páginas acumuladas)
+**Para**: monitorizar el avance editorial y detectar cuellos de botella
+
+**DoD**
+
+* Listado por **año/mes/nº** con estado: **PLANIFICADO / PROPUESTO / PUBLICADO / ARCHIVADO**.
+* Visualización de **páginas totales** vs **capacidad** configurada.
+* Filtros por estado, periodo y sección.
+* Enlace a detalle del número (artículos asignados y orden).
+
+---
+
+## HU.22 – Histórico y observaciones de artículos
+
+**Como**: Dirección
+**Quiero**: ver el **histórico** de cambios y las **observaciones** de cada artículo
+**Para**: garantizar trazabilidad del proceso editorial
+
+**DoD**
+
+* Línea temporal con estados, fechas y usuario que realizó el cambio.
+* Observaciones editoriales visibles con **timestamp** y autor de la nota.
+* Descarga de versiones de manuscritos (si el perfil lo permite).
+* Eventos clave marcados: recepción, asignación, evaluaciones, propuesta, publicación.
+
+---
+
+## HU.23 – Búsqueda de artículos (Dirección)
+
+**Como**: Dirección
+**Quiero**: buscar artículos por **título, autor, estado, temática, sección y fechas**
+**Para**: acceder rápidamente a la información requerida
+
+**DoD**
+
+* Búsqueda combinando **múltiples filtros** y texto libre.
+* Resultados **paginados** con columnas configurables.
+* Acceso directo a detalle de artículo y descarga de documentos permitidos.
+* Posibilidad de **exportar** resultados (XLS/CSV) si el perfil lo autoriza.
+
+---
+
+## HU.24 – Búsqueda de autores (Dirección)
+
+**Como**: Dirección
+**Quiero**: buscar autores por **nombre, unidad/perfil militar, producción**
+**Para**: analizar contribuciones y localizar datos de contacto
+
+**DoD**
+
+* Filtros por nombre, email, perfil militar, nº de artículos, estado de publicaciones.
+* Acceso a ficha de autor y a su lista de artículos.
+* Exportación **XLS/CSV** bajo permisos.
+
+---
+
+## HU.25 – Búsqueda de números de revista (Dirección)
+
+**Como**: Dirección
+**Quiero**: localizar **números** por **año/mes/nº, estado y secciones**
+**Para**: disponer de información consolidada de planificación y publicación
+
+**DoD**
+
+* Filtros combinables + texto libre.
+* Vista de resumen con estado y **porcentaje de capacidad ocupada**.
+* Acceso a detalle del número y a los artículos asignados.
+
+---
+
+## HU.26 – Informes y estadísticas (panel)
+
+**Como**: Dirección
+**Quiero**: ver un **panel** con indicadores de artículos, evaluaciones, tiempos y suscripciones
+**Para**: tomar decisiones basadas en datos
+
+**DoD**
+
+* KPIs mínimos:
+
+  * Tiempo medio por fase (**recepción→evaluación→propuesta→publicación**).
+  * Nº artículos por estado y por temática.
+  * Nº evaluaciones pendientes / fuera de plazo.
+  * Suscripciones activas/suspendidas/vencidas y **ejemplares** por lote.
+* Filtros por periodo y exportación a **PDF** (captura del panel).
+
+---
+
+## HU.27 – Exportación de listados (autorizados)
+
+**Como**: Dirección
+**Quiero**: exportar listados de **artículos, autores y números**
+**Para**: compartir y analizar la información fuera del sistema
+
+**DoD**
+
+* Exportación **XLS/CSV** de resultados con columnas visibles.
+* Sólo perfiles con permiso; registro de **auditoría**.
+* Límite de filas configurable y **paginación** en servidor.
+
+---
+
+## HU.28 – Alta de Usuario (Administración)
+
+**Como**: Administrador
+**Quiero**: dar de alta usuarios en la aplicación
+**Para**: habilitar su acceso (vía infraestructura DICODEF)
+
+**DoD**
+
+* Formulario con datos mínimos: nombre, email institucional, **identificador DICODEF**.
+* Validaciones de unicidad por email/identificador.
+* Estado inicial **ALTA**; sin gestión de recuperación de credenciales (externo a la app).
+* Registro en **auditoría** (quién dio de alta, cuándo).
+
+---
+
+## HU.29 – Asignar roles a usuario
+
+**Como**: Administrador
+**Quiero**: asignar **uno o varios roles** (Autor, Consejero, Redactor, Distribuidor, Dirección)
+**Para**: definir permisos de uso en la aplicación
+
+**DoD**
+
+* Selección múltiple de roles, con **vigencia** opcional (desde/hasta).
+* Cambio de roles refleja permisos en la siguiente sesión del usuario.
+* Auditoría de cambios: antes/después, usuario admin y fecha.
+
+---
+
+## HU.30 – Editar usuario
+
+**Como**: Administrador
+**Quiero**: editar los datos básicos y estado del usuario
+**Para**: mantener actualizada su información
+
+**DoD**
+
+* Editables: nombre, email institucional, estado (**ALTA / BAJA**), observaciones.
+* No se gestiona contraseña (dependencia DICODEF).
+* Auditoría de edición.
+
+---
+
+## HU.31 – Desactivar usuario (baja)
+
+**Como**: Administrador
+**Quiero**: **desactivar** a un usuario (BAJA)
+**Para**: revocar su acceso a la aplicación
+
+**DoD**
+
+* Cambio de estado **ALTA → BAJA** con motivo.
+* Efecto inmediato: bloqueo de acceso a funcionalidades.
+* Historial de accesos conserva trazabilidad; no se eliminan datos.
+
+---
+
+## HU.32 – Consulta de usuarios y roles
+
+**Como**: Administrador
+**Quiero**: consultar el listado de usuarios y sus **roles**
+**Para**: auditar permisos y altas/bajas
+
+**DoD**
+
+* Filtros por rol, estado y texto libre.
+* Vista de detalle con **roles**.
 
 ---
