--- a/5.1.-Sprint-Planning.md
+++ b/5.1.-Sprint-Planning.md
@@ -66,7 +66,7 @@
 
 ---
 
-## 🔹 Resumen del Sprint 1
+## Resumen del Sprint 1
 
 | PBI | Área Funcional | HU Cubiertas | Total Issues | Estimación Total (h) |
 |------|----------------|---------------|---------------|-----------------------|
