--- a/1.1.-Actores.md
+++ b/1.1.-Actores.md
@@ -1,6 +1,6 @@
 # Actores del Sistema
 
-## **Editor**
+## **Redactor**
 
 * **Descripción**: Usuario responsable de la **gestión editorial**. Es quien recibe los artículos enviados a la Revista Ejército por correo electrónico y los registra en el sistema.
 * **Responsabilidades**:
