--- a/1.1.-Actores.md
+++ b/1.1.-Actores.md
@@ -71,7 +71,7 @@
 
 ---
 
-## **Autor** *(Entidad de negocio, sin acceso)*
+## **Autor**
 
 * **Descripción**: Persona (civil o militar) que envía artículos a la revista para su evaluación y posible publicación.
 * **Responsabilidades**:
@@ -83,7 +83,7 @@
 
 ---
 
-## **Consejero** *(Entidad de negocio, sin acceso)*
+## **Consejero**
 
 * **Descripción**: Personal militar asignado por el Editor para realizar evaluaciones de artículos anonimizados.
 * **Responsabilidades**:
