--- a/5.1.-Sprint-Planning.md
+++ b/5.1.-Sprint-Planning.md
@@ -4,15 +4,15 @@
 
 | ID | Título del Issue | HU Asociada | Dependencias | PBI | HE (h) |
 |----|------------------|--------------|---------------|------|--------|
-| 01 | Crear formulario de alta de autor (datos personales y contacto) | HU.01 | – | PBI 01 | 8 |
-| 02 | Implementar carga de direcciones (≥1 obligatoria) | HU.01 | 01 | PBI 01 | 6 |
-| 03 | Implementar carga de documentos obligatorios (DNI + CV) | HU.01 | 01 | PBI 01 | 6 |
-| 04 | Añadir registro de perfil militar en autores | HU.01 | 01 | PBI 01 | 4 |
-| 05 | Añadir datos bancarios en ficha de autor | HU.01 | 01 | PBI 01 | 4 |
-| 06 | Crear vista de ficha de autor con listado de artículos | HU.05 | 01–05 | PBI 01 | 6 |
-| 07 | Añadir buscador de autores con filtros básicos | HU.05 | 01–06 | PBI 01 | 8 |
+| 01 | Crear formulario de alta de autor (datos personales y contacto) | HU.01 | – | PBI-01 | 8 |
+| 02 | Implementar carga de direcciones (≥1 obligatoria) | HU.01 | 01 | PBI-01 | 6 |
+| 03 | Implementar carga de documentos obligatorios (DNI + CV) | HU.01 | 01 | PBI-01 | 6 |
+| 04 | Añadir registro de perfil militar en autores | HU.01 | 01 | PBI-01 | 4 |
+| 05 | Añadir datos bancarios en ficha de autor | HU.01 | 01 | PBI-01 | 4 |
+| 06 | Crear vista de ficha de autor con listado de artículos asociados | HU.05 | 01–05 | PBI-01 | 6 |
+| 07 | Añadir buscador de autores con filtros básicos | HU.05 | 01–06 | PBI-01 | 6 |
 
-**Total estimado PBI-01:** ≈ **42 h**
+**Total estimado PBI-01:** ≈ **40 h**
 
 ---
 
@@ -20,16 +20,16 @@
 
 | ID | Título del Issue | HU Asociada | Dependencias | PBI | HE (h) |
 |----|------------------|--------------|---------------|------|--------|
-| 08 | Crear formulario de alta de artículo (título, tipo, temática, sección, fecha) | HU.02 | – | PBI 02 | 8 |
-| 09 | Implementar asociación de autores a artículos con orden de autoría | HU.02 | 01–08 | PBI 02 | 8 |
-| 10 | Añadir carga de manuscrito obligatorio (DOC/PDF) y anexos opcionales | HU.02 | 08 | PBI 02 | 6 |
-| 11 | Añadir campos manuales de medidas (palabras, caracteres, páginas) | HU.02 | 08 | PBI 02 | 4 |
-| 12 | Crear vista de detalle de artículo con documentos adjuntos | HU.02 | 08–11 | PBI 02 | 8 |
-| 13 | Implementar flujo de estados de artículos | HU.03 | 08–12 | PBI 02 | 8 |
-| 14 | Validar transiciones de estado según reglas | HU.03 | 13 | PBI 02 | 6 |
-| 15 | Implementar clasificación de artículo (tipo/temática/sección) | HU.04 | 08 | PBI 02 | 6 |
+| 08 | Crear formulario de alta de artículo (título, tipo, temática, sección, fecha) | HU.02 | – | PBI-02 | 8 |
+| 09 | Implementar asociación de autores a artículos con orden de autoría | HU.02 | 01–08 | PBI-02 | 8 |
+| 10 | Añadir carga de manuscrito obligatorio (DOC/PDF) y anexos opcionales | HU.02 | 08 | PBI-02 | 6 |
+| 11 | Añadir campos manuales de medidas (palabras, caracteres, páginas) | HU.02 | 08 | PBI-02 | 4 |
+| 12 | Crear vista de detalle de artículo con documentos adjuntos | HU.02 | 08–11 | PBI-02 | 6 |
+| 13 | Implementar flujo de estados de artículos (Recibido → En revisión → Evaluado → Propuesto → Publicado/Archivado) | HU.03 | 08–12 | PBI-02 | 8 |
+| 14 | Validar transiciones de estado según reglas | HU.03 | 13 | PBI-02 | 6 |
+| 15 | Implementar clasificación de artículo (tipo/temática/sección) | HU.04 | 08 | PBI-02 | 6 |
 
-**Total estimado PBI-02:** ≈ **54 h**
+**Total estimado PBI-02:** ≈ **52 h**
 
 ---
 
@@ -37,14 +37,14 @@
 
 | ID | Título del Issue | HU Asociada | Dependencias | PBI | HE (h) |
 |----|------------------|--------------|---------------|------|--------|
-| 16 | Crear formulario de alta de consejero (perfil militar obligatorio) | HU.05 | – | PBI 03 | 6 |
-| 17 | Crear listado de consejeros con filtro por especialidad | HU.05 | 16 | PBI 03 | 6 |
-| 18 | Implementar asignación de 1..N consejeros a artículos | HU.06 | 08, 16–17 | PBI 03 | 8 |
-| 19 | Evitar duplicidades en asignación de consejeros | HU.06 | 18 | PBI 03 | 4 |
-| 20 | Crear formulario de registro de evaluación (nota, recomendación, observaciones) | HU.07 | 18 | PBI 03 | 8 |
-| 21 | Permitir adjuntar informe PDF opcional en la evaluación | HU.07 | 20 | PBI 03 | 6 |
-| 22 | Validar paso de artículo a estado Evaluado | HU.07 | 20–21 | PBI 03 | 6 |
-| 23 | Crear historial de evaluaciones en vista del artículo | HU.07 | 20–22 | PBI 03 | 6 |
+| 16 | Crear formulario de alta de consejero (perfil militar obligatorio) | HU.05 | – | PBI-03 | 6 |
+| 17 | Crear listado de consejeros con filtro por especialidad | HU.05 | 16 | PBI-03 | 6 |
+| 18 | Implementar asignación de 1..N consejeros a artículos en estado En revisión | HU.06 | 08, 16–17 | PBI-03 | 8 |
+| 19 | Evitar duplicidades en asignación de consejeros | HU.06 | 18 | PBI-03 | 4 |
+| 20 | Crear formulario de registro de evaluación (nota, recomendación, observaciones) | HU.07 | 18 | PBI-03 | 8 |
+| 21 | Permitir adjuntar informe PDF opcional en la evaluación | HU.07 | 20 | PBI-03 | 6 |
+| 22 | Validar paso de artículo a estado Evaluado cuando se alcanza el mínimo de evaluaciones | HU.07 | 20–21 | PBI-03 | 6 |
+| 23 | Crear historial de evaluaciones en vista del artículo | HU.07 | 20–22 | PBI-03 | 6 |
 
 **Total estimado PBI-03:** ≈ **50 h**
 
@@ -54,15 +54,13 @@
 
 | ID | Título del Issue | HU Asociada | Dependencias | PBI | HE (h) |
 |----|------------------|--------------|---------------|------|--------|
-| 24 | Crear formulario de alta de número de revista (nº, mes, año) | HU.08 | – | PBI 04 | 8 |
-| 25 | Evitar duplicidades en nº + año | HU.08 | 24 | PBI 04 | 4 |
-| 26 | Implementar asignación de artículos a un número (solo evaluados) | HU.09 | 22, 24–25 | PBI 04 | 8 |
-| 27 | Calcular total de páginas del número | HU.09 | 26 | PBI 04 | 6 |
-| 28 | Validar número como Propuesto si la asignación es coherente | HU.09 | 26–27 | PBI 04 | 6 |
-| 29 | Implementar vista de propuesta de número con listado de artículos | HU.09 | 26–28 | PBI 04 | 8 |
-| 30 | Cambiar estado de número a Publicado, congelando la asignación | HU.10 | 29 | PBI 04 | 6 |
+| 24 | Crear formulario de alta de número de revista (nº, mes, año) | HU.08 | – | PBI-04 | 8 |
+| 25 | Evitar duplicidades en nº + año | HU.08 | 24 | PBI-04 | 4 |
+| 26 | Implementar asignación de artículos a un número (solo evaluados) | HU.09 | 22, 24–25 | PBI-04 | 8 |
+| 27 | Validar número como Propuesto si la asignación es coherente | HU.09 | 26 | PBI-04 | 6 |
+| 28 | Cambiar estado de número a Publicado, congelando la asignación | HU.10 | 27 | PBI-04 | 6 |
 
-**Total estimado PBI-04:** ≈ **46 h**
+**Total estimado PBI-04:** ≈ **32 h**
 
 ---
 
@@ -70,16 +68,17 @@
 
 | PBI | Área Funcional | HU Cubiertas | Total Issues | Estimación Total (h) |
 |------|----------------|---------------|---------------|-----------------------|
-| PBI-01 | Gestión de Autores | HU.01–HU.05 | 7 | 42 h |
-| PBI-02 | Gestión de Artículos | HU.02–HU.04 | 8 | 54 h |
-| PBI-03 | Consejeros y Evaluaciones | HU.05–HU.07 | 8 | 50 h |
-| PBI-04 | Números de Revista | HU.08–HU.10 | 7 | 46 h |
-| **Total Sprint 1** | — | **HU.01–HU.10** | **30 Issues** | **≈192 h (≈24 días)** |
+| **PBI-01** | Gestión de Autores | HU.01–HU.05 | 7 | 40 h |
+| **PBI-02** | Gestión de Artículos | HU.02–HU.04 | 8 | 52 h |
+| **PBI-03** | Consejeros y Evaluaciones | HU.05–HU.07 | 8 | 50 h |
+| **PBI-04** | Números de Revista | HU.08–HU.10 | 5 | 32 h |
+| **Total Sprint 1** | — | **HU.01–HU.10** | **28 Issues** | **≈174 h (≈21,5 días)** |
 
 ---
 
-**Conclusiones:**
-- Cada issue representa **una tarea de ≤1 día (4–8 h)**.  
-- El sprint completo cubre **30 issues / 192 h**.  
+## Conclusiones
 
-
+- El Sprint 1 abarca **10 Historias de Usuario (HU.01–HU.10)**.  
+- Se planifican **28 Issues** distribuidos en 4 PBIs.  
+- Cada Issue equivale a una tarea de **≤1 día (4–8 h)**.  
+- La carga total del sprint es de **≈174 horas**, lo que representa un esfuerzo de **21–22 días efectivos** para un equipo de 2 desarrolladores.
